tests/baselines/reference/constructorParametersInVariableDeclarations.errors.txt
==== tests/cases/compiler/constructorParametersInVariableDeclarations.ts (6 errors) ====
    class A {
        private a = x;
                    ~
!!! constructorParametersInVariableDeclarations.ts(2,17): error TS2095: Cannot find name 'x'.
        private b = { p: x };
                         ~
!!! constructorParametersInVariableDeclarations.ts(3,22): error TS2095: Cannot find name 'x'.
        private c = () => x;
                          ~
!!! constructorParametersInVariableDeclarations.ts(4,23): error TS2095: Cannot find name 'x'.
        constructor(x: number) {
        }
    }
    
    class B {
        private a = x;
                    ~
!!! constructorParametersInVariableDeclarations.ts(10,17): error TS2095: Cannot find name 'x'.
        private b = { p: x };
                         ~
!!! constructorParametersInVariableDeclarations.ts(11,22): error TS2095: Cannot find name 'x'.
        private c = () => x;
                          ~
!!! constructorParametersInVariableDeclarations.ts(12,23): error TS2095: Cannot find name 'x'.
        constructor() {
            var x = 1;
        }
    }